atualizacao 5 e 6
